--- a/app/scripts/views/directive/hjm_content2img.html
+++ b/app/scripts/views/directive/hjm_content2img.html
@@ -54,6 +54,6 @@
         <a class="btn btn-success btn-rounded" ng-click="add();" ng-if="onlyContent!=1">
             <span class="glyphicon glyphicon-plus"></span> 新增一条
         </a>
-        <a class="btn btn-warning btn-rounded" ng-click="conslog()">打印日志</a>
+        <a class="btn btn-primary btn-rounded" ng-click="conslog()" show-role="admin">打印日志</a>
     </div>
 </div>
