--- a/app/scripts/views/biz/act/update.html
+++ b/app/scripts/views/biz/act/update.html
@@ -1,4 +1,9 @@
 <div class="dashboard-page ">
+    <!--<style type="text/css">-->
+        <!--input.ng-dirty.ng-invalid, textarea.ng-dirty.ng-invalid {-->
+            <!--border: 1px solid red;-->
+        <!--}-->
+    <!--</style>-->
     <div class="panel panel-primary">
         <div class="panel-heading">
             <h3 class="panel-title" ng-if="!$stateParams.product_id">新增活动</h3>
@@ -15,7 +20,8 @@
                         <div form-input text="活动ID" ng-model="param.product_id"
                              ng-show="$stateParams.product_id"
                              placeholder="活动ID" ng-disabled="$stateParams.product_id"></div>
-                        <div form-input text="活动标题" ng-model="param.title" placeholder="活动标题" required="true"></div>
+                        <div form-input text="活动标题" ng-model="param.title" placeholder="活动标题,不超过30个字" required="true"
+                             minlength="1" maxlength="30"></div>
                         <div form-input text="活动简介" ng-model="param.brief" placeholder="不超过30个字" minlength="1"
                              maxlength="30"></div>
                         <div form-radio text="活动品类" ng-model="param.act_type" required="true" default="亲子"
@@ -32,7 +38,7 @@
                         <div form-date-time text="上架时间" ng-model="param.start_time" required="true"></div>
                         <div form-date-time text="下架时间" ng-model="param.end_time" required="true"></div>
                         <div form-image text="运营大图" ng-model="param.pics" max="100" required="true"></div>
-                        <div form-image text="缩略小图" ng-model="param.thumbnail_pics" max="100"></div>
+                        <!--<div form-image text="缩略小图" ng-model="param.thumbnail_pics" max="100"></div>-->
                     </div>
                 </div>
                 <div class="panel panel-primary">
@@ -100,6 +106,7 @@
                              source="[{text:'是',value:'1'},{text:'否',value:'2'}]" source-api=""></div>
                     </div>
                 </div>
+                <div form-error-block></div>
                 <a class="btn btn-success btn-rounded" show-role="'{{$stateParams.product_id?'admin,op':''}}'"
                    ng-disabled="FormBody.$invalid" ng-click="submit()">提交</a>
                 <!--<a class="btn btn-warning btn-rounded" ng-click="aaa()">查看提交数据</a>-->
