--- a/app/scripts/views/directive/hjm/hjm-form-err-block.html
+++ b/app/scripts/views/directive/hjm/hjm-form-err-block.html
@@ -18,7 +18,7 @@
                     <span class="col-sm-2" ng-bind="val.text"></span>
                     <span class="col-sm-2" ng-bind="val.$name"></span>
                     <span class="col-sm-2" ng-repeat="(k,v) in val.$error" ng-bind="($index+1)+':'+(k|form_err)"></span>
-                    <span class="col-sm-2" ng-bind="val|json"></span>
+                    <span class="col-sm-2" ng-bind="val|json" show-env="dev,test"></span>
                 </div>
             </li>
         </ul>
