--- a/app/scripts/views/biz/orders/update.html
+++ b/app/scripts/views/biz/orders/update.html
@@ -1,7 +1,7 @@
 <div class="dashboard-page ">
     <div class="panel panel-primary">
         <div class="panel-heading">
-            <h3 class="panel-title" ng-if="!$stateParams.product_id">新增商品</h3>
+            <h3 class="panel-title" ng-if="!$stateParams.product_id">新增维护订单数据</h3>
             <h3 class="panel-title" show-role="'admin,op'" ng-if="$stateParams.product_id">修改商品</h3>
             <h3 class="panel-title" show-role="'!admin,op'" ng-if="$stateParams.product_id">商品详情</h3>
         </div>
@@ -10,91 +10,17 @@
                   disabled-role="{{$stateParams.product_id?'admin,op':''}}">
                 <div class="panel panel-primary">
                     <div class="panel-body">
-                        <h4>商品信息</h4>
-                        <div form-input text="商品ID" ng-model="param.product_id" ng-show="$stateParams.product_id"
-                             placeholder="商品ID" ng-disabled="$stateParams.product_id"></div>
-                        <div form-input text="商品标题" ng-model="param.title" placeholder="商品标题"
-                             required="true"></div>
-                        <div form-input text="商品简介" ng-model="param.brief" placeholder="不超过30个字" minlength="1"
-                             maxlength="30"></div>
-                        <div form-radio text="商品品类" ng-model="param.sku" required="true" default="1"
-                             source="[{text:'鲜花',value:'1'},{text:'其他',value:'0'}]" source-api=""></div>
-                        <div form-radio text="商品类型" ng-model="param.frequency_type" required="true" default="2"
-                             source="[{text:'包月',value:2},{text:'单次',value:1}]" source-api=""></div>
-                        <div form-input text="商品单位" ng-model="param.price_label"></div>
-                        <div form-input text="库存总数" ng-model="param.origin_inventory" min="0" type="number"
-                             required="true"></div>
-                        <div form-input text="单次限购份数" ng-model="param.order_count_max" type="number"
-                             min="1" required="true"></div>
-                        <div form-input text="单人限购份数" ng-model="param.per_buy_count" type="number"
-                             min="0"></div>
-                        <!--<div form-input text="已售份数基数" ng-model="param.base_sale_count" type="number"-->
-                        <!--min="0"></div>-->
-                        <div form-date-time text="上架时间" ng-model="param.start_time" required="true"></div>
-                        <div form-date-time text="下架时间" ng-model="param.end_time" required="true"></div>
-                        <div form-date-time text="活动开始时间" ng-model="param.act_start_time" required="true"></div>
-                        <div form-date-time text="活动结束时间" ng-model="param.act_end_time" required="true"></div>
-                        <div form-date-time text="报名开始时间" ng-model="param.act_apply_start_time" required="true"></div>
-                        <div form-date-time text="报名截止时间" ng-model="param.act_apply_end_time" required="true"></div>
-                        <div form-input text="活动地点" ng-model="param.act_address" placeholder="例如:永达国际大厦"></div>
-                        <div form-input text="详细地址" ng-model="param.act_detailed_address"
-                             placeholder="例如:上海市浦东新区龙阳路2277号"></div>
-                        <div form-image text="运营大图" ng-model="param.pics" max="100" required="true"></div>
-                        <div form-image text="缩略小图" ng-model="param.thumbnail_pics" max="100" required="true"></div>
-                        <div form-image-content text="图文详情" ng-model="param.contents" required="true"></div>
-                    </div>
-                </div>
-                <div class="panel panel-primary">
-                    <div class="panel-body">
-                        <h4>拼团规则</h4>
-                        <div form-radio text="互助团类型" type="radio" ng-model="param.category" required="true"
-                             source="[{text:'砍价团',value:'1'},{text:'人数团',value:'2'}]" source-api=""></div>
-                        <div form-input text="玩法说明标题" ng-model="param.play_subject" placeholder="玩法说明标题"></div>
-                        <div form-textarea text="玩法说明内容" ng-model="param.play_introduction"
-                             placeholder="玩法说明内容" required="true"></div>
-
-                        <div form-input text="起始价" ng-model="param.high_price" required="true" min="0" type="number"
-                             ng-show="param.category==1"></div>
-                        <div form-input text="底价" ng-model="param.bottom_price" required="true" min="0" type="number"
-                             ng-show="param.category==1"></div>
-                        <div form-input text="单人返现金额" ng-model="param.per_cut_amount" required="true" min="0"
-                             type="number" ng-show="param.category==1"></div>
-
-                        <div form-input text="拼团人数" ng-model="param.group_min_num" required="true" min="0" type="number"
-                             ng-show="param.category==2"></div>
-                        <div form-input text="拼团单价" ng-model="param.price" required="true" min="0" type="number"
-                             ng-show="param.category==2"></div>
-
-                        <div form-input text="拼团有效时间(小时)" ng-model="hours" min="0" required="true"
-                             type="number" placeholder="单位:小时"></div>
-                    </div>
-                </div>
-                <div class="panel panel-primary">
-                    <div class="panel-body">
-                        <h4>配送规则</h4>
-                        <div form-radio text="物流" ng-model="param.delivery_type" required="true"
-                             ng-change="delivery_type()" ng-disabled="$stateParams.product_id"
-                             source="[{text:'顺丰配送',value:'1'},{text:'无需配送',value:'3'}]"
-                             source-api=""></div>
-                        <div form-input text="配送次数" ng-model="param.frequency_num" type="number" min="0"
-                             ng-show="param.delivery_type!=3"
-                             ng-disabled="$stateParams.product_id"></div>
-                        <div form-checkbox text="覆盖／配送城市" ng-model="param.visible_cities" required="true"
-                             source="[{text:'上海市',value:'上海市'},{text:'南京市',value:'南京市'},
-                             {text:'厦门市',value:'厦门市'},{text:'北京市',value:'北京市'}]"
-                             source-api=""></div>
-                        <div form-radio text="送达时间类型" ng-model="param.arrive_type"
-                             ng-show="param.delivery_type!=3" ng-disabled="$stateParams.product_id"
-                             source="[{text:'周六/周一',value:'1'},{text:'无需指定',value:'2'}]" source-api=""></div>
-                    </div>
-                </div>
-                <div class="panel panel-primary">
-                    <div class="panel-body">
-                        <h4>管理</h4>
-                        <div form-textarea text="管理备注" ng-model="param.admin_remark" required="true"></div>
-                        <div form-input text="排序" ng-model="param.order_by" required="true" type="number" min="0"></div>
-                        <div form-radio text="显示" ng-model="param.visible" required="true" default="1"
-                             source="[{text:'是',value:'1'},{text:'否',value:'2'}]" source-api=""></div>
+                        <h4>维护订单数据</h4>
+                        <label class="col-sm-2 control-label">商品ID<span
+                                class="form_label_dangus">*</span></label>
+                        <div class="col-sm-6">
+                            <input class="form-control" ng-model="param.product_id" required>
+                        </div>
+                        <a class="btn btn-primary btn-rounded" ng-click="search()">查询</a>
+                        <div class="col-sm-12" form-select text="活动类目" ng-model="param.option_id"
+                             source="options" source-api=""></div>
+                        <div form-textarea text="用户ID" ng-model="param.user_ids" required="true"
+                             data-placeholder="用户ID,英文逗号隔开填写多个"></div>
                     </div>
                 </div>
                 <!--<a class="btn btn-info btn-rounded" ng-disabled="FormBody.$invalid" ng-click="submit(0)">保存草稿</a>-->
