--- a/app/scripts/views/biz/product/update.html
+++ b/app/scripts/views/biz/product/update.html
@@ -32,6 +32,13 @@
                         <!--min="0"></div>-->
                         <div form-date-time text="上架时间" ng-model="param.start_time" required="true"></div>
                         <div form-date-time text="下架时间" ng-model="param.end_time" required="true"></div>
+                        <div form-date-time text="活动开始时间" ng-model="param.act_start_time" required="true"></div>
+                        <div form-date-time text="活动结束时间" ng-model="param.act_end_time" required="true"></div>
+                        <!--<div form-date-time text="报名开始时间" ng-model="param.act_apply_start_time" required="true"></div>-->
+                        <!--<div form-date-time text="报名截止时间" ng-model="param.act_apply_end_time" required="true"></div>-->
+                        <div form-input text="活动地点" ng-model="param.act_address" placeholder="例如:永达国际大厦"></div>
+                        <div form-input text="详细地址" ng-model="param.act_detailed_address"
+                             placeholder="例如:上海市浦东新区龙阳路2277号"></div>
                         <div form-image text="运营大图" ng-model="param.pics" max="100" required="true"></div>
                         <div form-image text="缩略小图" ng-model="param.thumbnail_pics" max="100" required="true"></div>
                         <div form-image-content text="图文详情" ng-model="param.contents" required="true"></div>
@@ -85,8 +92,6 @@
                     <div class="panel-body">
                         <h4>管理</h4>
                         <div form-textarea text="管理备注" ng-model="param.admin_remark" required="true"></div>
-                        <!--<div form-radio text="置顶" ng-model="param.order_by" required="true" default="1"-->
-                        <!--source="[{text:'是',value:'1'},{text:'否',value:'0'}]" source-api=""></div>-->
                         <div form-input text="排序" ng-model="param.order_by" required="true" type="number" min="0"></div>
                         <div form-radio text="显示" ng-model="param.visible" required="true" default="1"
                              source="[{text:'是',value:'1'},{text:'否',value:'2'}]" source-api=""></div>
