--- a/app/scripts/views/biz/product_act/update.html
+++ b/app/scripts/views/biz/product_act/update.html
@@ -1,13 +1,51 @@
 <div class="dashboard-page ">
     <div class="panel panel-primary">
         <div class="panel-heading">
-            <h3 class="panel-title" ng-if="!$stateParams.product_id">新增商品</h3>
-            <h3 class="panel-title" show-role="'admin,op'" ng-if="$stateParams.product_id">修改商品</h3>
-            <h3 class="panel-title" show-role="'!admin,op'" ng-if="$stateParams.product_id">商品详情</h3>
+            <h3 class="panel-title" ng-if="!$stateParams.product_id">新增活动类商品</h3>
+            <h3 class="panel-title" show-role="'admin,op'" ng-if="$stateParams.product_id">修改活动类商品</h3>
+            <h3 class="panel-title" show-role="'!admin,op'" ng-if="$stateParams.product_id">活动类商品详情</h3>
         </div>
         <div class="panel-body">
             <form class="form-horizontal" name="FormBody" novalidate
                   disabled-role="{{$stateParams.product_id?'admin,op':''}}">
+                <div class="panel panel-primary">
+                    <div class="panel-body">
+                        <h4>地图信息</h4>
+                        <div form-input text="城市" ng-model="param.city_name"
+                             placeholder="例如:城市"></div>
+                        <div form-input text="行政区" ng-model="param.district" placeholder="行政区"></div>
+                        <div form-input text="板块" ng-model="param.area" placeholder="板块"></div>
+                        <div class="form-group">
+                            <div class="form_element">
+                                <label class="col-sm-2 control-label">小区地址<span
+                                        class="form_label_dangus">*</span></label>
+
+                                <div class="col-sm-6">
+                                    <input class="form-control" id="address"
+                                           ng-class="{'form_dangus':community.address}"
+                                           ng-change="community.address = 0" ng-model="param.address"
+                                           placeholder="小区地址">
+                                </div>
+                                <div class="col-sm-1">
+                                    <a class="btn btn-info btn-rounded" ng-click="add()">查询</a>
+                                </div>
+                                <div class="col-sm-1">
+                                    <a class="btn btn-info btn-rounded" ng-click="showmap();isshowmap=!isshowmap;"
+                                       ng-bind="!isshowmap?'展示地图':'隐藏地图'"></a>
+                                </div>
+                            </div>
+                        </div>
+                        <div form-input text="经度" ng-model="param.longitude" placeholder="纬度"></div>
+                        <div form-input text="纬度" ng-model="param.latitude" placeholder="纬度"></div>
+                        <div class="form-group" ng-show="isshowmap">
+                            <div class="col-sm-10 col-sm-offset-2" style="height: 450px;">
+                                <baidumap lng="param.longitude" lat="param.latitude"
+                                          city="param.city_name" address="param.address"
+                                          district="param.district" callback="callback"></baidumap>
+                            </div>
+                        </div>
+                    </div>
+                </div>
                 <div class="panel panel-primary">
                     <div class="panel-body">
                         <h4>商品信息</h4>
@@ -17,13 +55,13 @@
                              required="true"></div>
                         <div form-input text="商品简介" ng-model="param.brief" placeholder="不超过30个字" minlength="1"
                              maxlength="30"></div>
-                        <div form-radio text="商品品类" ng-model="param.sku" required="true" default="1"
-                             source="[{text:'鲜花',value:'1'},{text:'其他',value:'0'}]" source-api=""></div>
+                        <div form-radio text="商品品类" ng-model="param.sku" required="true" default="3"
+                             source="[{text:'活动',value:'3'}]" source-api=""></div>
                         <div form-radio text="商品类型" ng-model="param.frequency_type" required="true" default="2"
                              source="[{text:'包月',value:2},{text:'单次',value:1}]" source-api=""></div>
                         <div form-input text="商品单位" ng-model="param.price_label"></div>
-                        <div form-input text="库存总数" ng-model="param.origin_inventory" min="0" type="number"
-                             required="true"></div>
+                        <!--<div form-input text="库存总数" ng-model="param.origin_inventory" min="0" type="number"-->
+                        <!--required="true"></div>-->
                         <div form-input text="单次限购份数" ng-model="param.order_count_max" type="number"
                              min="1" required="true"></div>
                         <div form-input text="单人限购份数" ng-model="param.per_buy_count" type="number"
@@ -32,6 +70,13 @@
                         <!--min="0"></div>-->
                         <div form-date-time text="上架时间" ng-model="param.start_time" required="true"></div>
                         <div form-date-time text="下架时间" ng-model="param.end_time" required="true"></div>
+                        <div form-date-time text="活动开始时间" ng-model="param.act_start_time" required="true"></div>
+                        <div form-date-time text="活动结束时间" ng-model="param.act_end_time" required="true"></div>
+                        <div form-date-time text="报名开始时间" ng-model="param.act_apply_start_time" required="true"></div>
+                        <div form-date-time text="报名截止时间" ng-model="param.act_apply_end_time" required="true"></div>
+                        <div form-input text="活动地点" ng-model="param.act_address" placeholder="例如:永达国际大厦"></div>
+                        <div form-input text="详细地址" ng-model="param.act_detailed_address"
+                             placeholder="例如:上海市浦东新区龙阳路2277号"></div>
                         <div form-image text="运营大图" ng-model="param.pics" max="100" required="true"></div>
                         <div form-image text="缩略小图" ng-model="param.thumbnail_pics" max="100" required="true"></div>
                         <div form-image-content text="图文详情" ng-model="param.contents" required="true"></div>
@@ -40,23 +85,27 @@
                 <div class="panel panel-primary">
                     <div class="panel-body">
                         <h4>拼团规则</h4>
-                        <div form-radio text="互助团类型" type="radio" ng-model="param.category" required="true"
-                             source="[{text:'砍价团',value:'1'},{text:'人数团',value:'2'}]" source-api=""></div>
+                        <div form-radio text="互助团类型" type="radio" ng-model="param.category" required="true" default="2"
+                             source="[{text:'人数团',value:'2'}]" source-api=""></div>
                         <div form-input text="玩法说明标题" ng-model="param.play_subject" placeholder="玩法说明标题"></div>
                         <div form-textarea text="玩法说明内容" ng-model="param.play_introduction"
                              placeholder="玩法说明内容" required="true"></div>
-
-                        <div form-input text="起始价" ng-model="param.high_price" required="true" min="0" type="number"
-                             ng-show="param.category==1"></div>
-                        <div form-input text="底价" ng-model="param.bottom_price" required="true" min="0" type="number"
-                             ng-show="param.category==1"></div>
-                        <div form-input text="单人返现金额" ng-model="param.per_cut_amount" required="true" min="0"
-                             type="number" ng-show="param.category==1"></div>
+                        <div form-table text="活动类目" ng-model="param.options" required="true" max="1"
+                             columns="[{'name': 'ID', 'field': 'option_id',disabled:'true'},
+                             {'name': '类目', 'field': 'option_name'},
+                             {'name': '价格', 'field': 'option_price',type:'number',min:'0',minLength:'2'},
+                             {'name': '库存', 'field': 'option_inventory'}]"></div>
+                        <!--<div form-input text="起始价" ng-model="param.high_price" required="true" min="0" type="number"-->
+                        <!--ng-show="param.category==1"></div>-->
+                        <!--<div form-input text="底价" ng-model="param.bottom_price" required="true" min="0" type="number"-->
+                        <!--ng-show="param.category==1"></div>-->
+                        <!--<div form-input text="单人返现金额" ng-model="param.per_cut_amount" required="true" min="0"-->
+                        <!--type="number" ng-show="param.category==1"></div>-->
 
                         <div form-input text="拼团人数" ng-model="param.group_min_num" required="true" min="0" type="number"
                              ng-show="param.category==2"></div>
-                        <div form-input text="拼团单价" ng-model="param.price" required="true" min="0" type="number"
-                             ng-show="param.category==2"></div>
+                        <!--<div form-input text="拼团单价" ng-model="param.price" required="true" min="0" type="number"-->
+                        <!--ng-show="param.category==2"></div>-->
 
                         <div form-input text="拼团有效时间(小时)" ng-model="hours" min="0" required="true"
                              type="number" placeholder="单位:小时"></div>
@@ -66,7 +115,7 @@
                     <div class="panel-body">
                         <h4>配送规则</h4>
                         <div form-radio text="物流" ng-model="param.delivery_type" required="true"
-                             ng-change="delivery_type()" ng-disabled="$stateParams.product_id"
+                             ng-change="delivery_type()" ng-disabled="$stateParams.product_id" default="3"
                              source="[{text:'顺丰配送',value:'1'},{text:'无需配送',value:'3'}]"
                              source-api=""></div>
                         <div form-input text="配送次数" ng-model="param.frequency_num" type="number" min="0"
@@ -90,6 +139,7 @@
                              source="[{text:'是',value:'1'},{text:'否',value:'2'}]" source-api=""></div>
                     </div>
                 </div>
+                <div form-error-block></div>
                 <!--<a class="btn btn-info btn-rounded" ng-disabled="FormBody.$invalid" ng-click="submit(0)">保存草稿</a>-->
                 <a class="btn btn-success btn-rounded" show-role="'{{$stateParams.product_id?'admin,op':''}}'"
                    ng-disabled="FormBody.$invalid" ng-click="submit()">提交</a>
