--- a/app/scripts/views/biz/orders/update.html
+++ b/app/scripts/views/biz/orders/update.html
@@ -11,7 +11,7 @@
                 <div class="panel panel-primary">
                     <div class="panel-body">
                         <h4>维护订单数据</h4>
-                        <label class="col-sm-2 control-label">商品ID<span
+                        <label class="col-sm-2 control-label">活动ID<span
                                 class="form_label_dangus">*</span></label>
                         <div class="col-sm-6">
                             <input class="form-control" ng-model="param.product_id" required>
@@ -19,8 +19,8 @@
                         <a class="btn btn-primary btn-rounded" ng-click="search()">查询</a>
                         <div class="col-sm-12" form-select text="活动类目" ng-model="param.option_id"
                              source="options" source-api=""></div>
-                        <div form-textarea text="用户ID" ng-model="param.user_ids" required="true"
-                             data-placeholder="用户ID,英文逗号隔开填写多个"></div>
+                        <div form-textarea text="用户ID" ng-model="user_ids" required="true"
+                        data-placeholder="用户ID,英文逗号隔开填写多个"></div>
                     </div>
                 </div>
                 <!--<a class="btn btn-info btn-rounded" ng-disabled="FormBody.$invalid" ng-click="submit(0)">保存草稿</a>-->
