--- a/app/scripts/views/biz/product/update.html
+++ b/app/scripts/views/biz/product/update.html
@@ -32,8 +32,8 @@
                         <!--min="0"></div>-->
                         <div form-date-time text="上架时间" ng-model="param.start_time" required="true"></div>
                         <div form-date-time text="下架时间" ng-model="param.end_time" required="true"></div>
-                        <div form-date-time text="活动开始时间" ng-model="param.act_start_time" required="true"></div>
-                        <div form-date-time text="活动结束时间" ng-model="param.act_end_time" required="true"></div>
+                        <!--<div form-date-time text="活动开始时间" ng-model="param.act_start_time" required="true"></div>-->
+                        <!--<div form-date-time text="活动结束时间" ng-model="param.act_end_time" required="true"></div>-->
                         <!--<div form-date-time text="报名开始时间" ng-model="param.act_apply_start_time" required="true"></div>-->
                         <!--<div form-date-time text="报名截止时间" ng-model="param.act_apply_end_time" required="true"></div>-->
                         <div form-input text="活动地点" ng-model="param.act_address" placeholder="例如:永达国际大厦"></div>
