add wechat qrcode

--- a/app/scripts/views/biz/wechat/qrcode.html
+++ b/app/scripts/views/biz/wechat/qrcode.html
@@ -8,9 +8,10 @@
                 <div class="panel panel-primary">
                     <div class="panel-body">
                         <h4>获取二维码</h4>
-                        <div form-radio text="是否为临时二维码" ng-model="param.type" default="temp" required="true"
-                             source="[{text:'临时',value:'temp'},{text:'永久',value:'1'}]"></div>
+                        <div form-radio text="是否为临时二维码" ng-model="param.type" default="1" required="true"
+                             source="[{text:'临时',value:'1'},{text:'永久',value:'2'}]"></div>
                         <div form-input text="场景编号" ng-model="param.scene_id" required="true"></div>
+                        <div form-input text="场景描述" ng-model="param.desc" required="true"></div>
                         <a class="btn btn-success btn-rounded" show-role="'admin'" ng-disabled="FormBody.$invalid"
                            ng-click="submit()">生成</a>
                     </div>
