--- a/app/scripts/views/biz/wechat/autoreply.html
+++ b/app/scripts/views/biz/wechat/autoreply.html
@@ -8,6 +8,7 @@
                 <div class="panel panel-primary">
                     <div class="panel-body">
                         <h4>微信自动回复</h4>
+                        <!--<div form-textarea text="自动回复内容" ng-model="auto_reply" required="true"></div>-->
                         <textarea class="form-control" rows="50" ng-model="auto_reply"></textarea>
                     </div>
                 </div>
