--- a/app/scripts/views/biz/product/update.html
+++ b/app/scripts/views/biz/product/update.html
@@ -66,7 +66,7 @@
                              ng-show="param.category==2"></div>
 
                         <div form-input text="拼团有效时间(小时)" ng-model="hours" min="0" required="true"
-                             type="number" placeholder="单位:小时"></div>
+                             placeholder="单位:小时"></div>
                     </div>
                 </div>
                 <div class="panel panel-primary">
